# pihole-lists

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  index.html  package.json  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: add-new-host.md
.github/workflows/: release.yml
lists/: adobe.txt  amp.txt  basic.txt  crypto.txt  dating.txt  drugs.txt  facebook.txt  fakenews.txt  gambling.txt  piracy.txt  ransonmware.txt  redirect.txt  scam.txt  smart-tv.txt  social.txt  softwares.txt  telemetry.txt  tiktok.txt  torrent.txt  vaping.txt  whatsapp.txt  x.txt  youtube.txt
src/: .log-config.yml  build.py  cleanup.py  main.py  readme_list.py
src/lists/: fakenews.txt  gambling.txt  porn.txt  social.txt
