[tool.poetry]
name = "pihole-lists"
version = "1.0.0"
description = "Adlists to complete your pi-hole server"
authors = ["Danilo Carolino <danilogcarolino@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
dnspython = "^2.6.1"
pyyaml = "^6.0.2"
coloredlogs = "^15.0.1"
validators = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.black]
line-length = 120
extend-exclude = '''
(
/.*__snapshots/.*output\.py # exclude the simple snapshot outputs
)
'''

[tool.flake8]
max-line-length = 120

[tool.pycodestyle]
max-line-length = 120

[tool.mypy]
python_version = 3.12
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true